-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8207877 | 12 | Lutz Schmidt | P3 | Resolved | Fixed | b04 |
| JDK-8207424 | 11.0.2 | Lutz Schmidt | P3 | Resolved | Fixed | b01 |
| JDK-8207639 | 11.0.1 | Lutz Schmidt | P3 | Resolved | Fixed | b02 |
Some time ago, the CompiledMethod state enum (declared in share/code/compiledMethod.hpp) was expanded by a new state called "not_installed". CodeHeap State Analytics must be enhanced to gracefully handle the new state.
- backported by
-
JDK-8207424 CodeHeap State Analytics must digest new method state
-
- Resolved
-
-
JDK-8207639 CodeHeap State Analytics must digest new method state
-
- Resolved
-
-
JDK-8207877 CodeHeap State Analytics must digest new method state
-
- Resolved
-
- relates to
-
JDK-8043070 nmethod::verify_interrupt_point() shouldn't enter safepoint
-
- Closed
-
-
JDK-8198691 CodeHeap State Analytics
-
- Resolved
-