8206271: CodeHeap State Analytics must digest new method state

Reviewed-by: kvn, mdoerr, thartmann